# libigl-vr-viewer

./: .gitmodules  README.md  main.cpp
include/: utils.h
shared/cmake/: CMakeLists.txt  FindOpenVR.cmake
shared/libigl/include/igl/opengl/: MeshGL.cpp  MeshGL.h  ViewerCore.cpp  ViewerCore.h
shared/libigl/include/igl/opengl/glfw/: Viewer.cpp  Viewer.h
src/: utils.cpp
